# egsa2ge

./: .gitignore  EGSA2GE_Portable.spec  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: release.yml
docs/: index.html  use_net_work.md
docs/manual/: MANUAL.md
src/egsa87_google_earth/: __init__.py  app.py  config.py  models.py
src/egsa87_google_earth/core/: __init__.py  coordinates.py
src/egsa87_google_earth/kml/: __init__.py  current_point.py  fly_to.py  network_link.py  saved_points.py
src/egsa87_google_earth/services/: file_service.py  google_earth_service.py  http_server.py
src/egsa87_google_earth/ui/: main_window.py
src/egsa87_google_earth/utils/: platform_utils.py
